welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:2: error: value lenght is not a member of Array[Int]
  var longeurTableau = nums.lenght()
                            ^indexOfValue:3: error: not found: value longueurTableau
  for (element <-0 to longueurTableau -1){
                      ^indexOfValue:4: error: not enough arguments for method indexOfValue: (nums: Array[Int], lookingFor: Int)Int.
Unspecified value parameter lookingFor.
    if ( indexOfValue(element) == lookingFor){
                     ^